--- a/src/app/home/landing-page/landing-page.component.html
+++ b/src/app/home/landing-page/landing-page.component.html
@@ -60,8 +60,35 @@
         <div ibmCol [columnNumbers]="{'md': 4, 'lg': 4}">
             <h3 class="landing-page__label">The Principles</h3>
         </div>
-        <div ibmCol [columnNumbers]="{'md': 4, 'lg': 4}">Carbon is Open</div>
-        <div ibmCol [columnNumbers]="{'md': 4, 'lg': 4}">Carbon is Modular</div>
-        <div ibmCol [columnNumbers]="{'md': 4, 'lg': 4}">Carbon is Consistent</div>
+        <div ibmCol [columnNumbers]="{'md': 4, 'lg': 4}">
+            <h4>Carbon is <span style="font-weight:bold;">Open</span></h4>
+            <div>
+                It's a distributed effort, guided by the principles of the open-source movement. Carbon's users are 
+                also it's makers, and everyone is encouraged to contribute.
+            </div>
+            <div>
+                <svg ibmIcon="person--favorite" size="32"></svg>
+            </div>
+        </div>
+        <div ibmCol [columnNumbers]="{'md': 4, 'lg': 4}">
+            <h4>Carbon is <span style="font-weight:bold;">Modular</span></h4>
+            <div>
+                Carbon's modularity ensures maximum flexibility in execution. It's components are designed to work 
+                seamlessly with each other, in whichever combination suits the needs of the user.
+            </div>
+            <div>
+                <svg ibmIcon="application" size="32"></svg>
+            </div>
+        </div>
+        <div ibmCol [columnNumbers]="{'md': 4, 'lg': 4}">
+            <h4>Carbon is <span style="font-weight:bold;">Consistent</span></h4>
+            <div>
+                Based on the comprehensive IBM Design Language, every element and component of Carbon was designed 
+                from the ground up to work elegantly together to ensure consistent, cohesive user experiences.
+            </div>
+            <div>
+                <svg ibmIcon="globe" size="32"></svg>
+            </div>
+        </div>
     </div>
 </div>
